[package]
name = "dira"
edition = "2021"
version = "0.1.0"
authors = ["Cameron Adams <cameron.adams@hey.com"]
license = "MIT"
description = "A CLI tool for aliasing directories for faster directory switching"
homepage = "https://github.com/cameronadams777/directory-alias"
repository = "https://github.com/cameronadams777/directory-alias"
keywords = ["cli", "alias", "cd"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
home = "0.5.3"
serde_json = "1.0.83"
